modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/return_null_in_void_func.gd
func test() -> void:
	return null
